frontend/test/should_fail/defYield_003e.grg
using defYield;

test t
{
	pp:p(--- yield x);
---
	def -x:EE->;
}

pattern p(--- def -x:E1->)
{
	-y:E1->;
---
	yield { yield x = y; }
}

